--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ android.useAndroidX=true
 kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.nonFinalResIds=false
+android.ndk.suppressMinSdkVersionError=21
