--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,25 @@
 [versions]
-agp = "8.2.2"
-apksig = "8.2.2"
-libsu = "5.2.2"
-guava = "33.0.0-jre"
-jsoup = "1.17.2"
-kotlin = "1.9.22"
+agp = "8.5.2"
+libsu = "5.3.0"
+guava = "33.3.0-jre"
+jsoup = "1.18.1"
+kotlin = "1.9.25"
 kotlinx-coroutines-android = "1.8.0"
-compose-compiler = "1.5.9"
+compose-compiler = "1.5.15"
 
-activity-ktx = "1.8.2"
+activity-ktx = "1.9.1"
 androidx-documentfile = "1.1.0-alpha01"
-coil-compose = "2.5.0"
+coil-compose = "2.7.0"
 navigation-compose = "2.7.7"
-osmdroid-android = "6.1.18"
+osmdroid-android = "6.1.20"
 recyclerview = "1.3.2"
 
-compose-bom = "2024.02.01"
+compose-bom = "2024.08.00"
 bcprov-jdk18on = "1.77"
 dexlib2 = "3.0.5"
 ffmpeg-kit = "6.0-2.LTS"
 gson = "2.10.1"
-junit = "5.10.2"
+junit = "5.11.0"
 material3 = "1.2.0"
 okhttp = "5.0.0-alpha.12"
 rhino = "1.7.14"
@@ -38,7 +37,7 @@ androidx-material-ripple = { module = "androidx.compose.material:material-ripple
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
 androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
-apksig = { module = "com.android.tools.build:apksig", version.ref = "apksig" }
+apksig = { module = "com.android.tools.build:apksig", version.ref = "agp" }
 bcprov-jdk18on = { module = "org.bouncycastle:bcprov-jdk18on", version.ref = "bcprov-jdk18on" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil-compose" }
 coil-video = { module = "io.coil-kt:coil-video", version.ref = "coil-compose" }
