--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -16,10 +16,10 @@ jobs:
         with:
           submodules: 'recursive'
 
-      - name: set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
           cache: gradle
 
@@ -29,22 +29,32 @@ jobs:
       - name: Build
         run: ./gradlew assembleArmv8Debug
 
-      - name: Build Version
-        run: ./gradlew getVersion
+      - name: Determine the latest Build Tools version installed
+        shell: bash
+        run: echo "BUILD_TOOL_VERSION=$(ls "$ANDROID_HOME/build-tools/" | tail -n 1)" >> $GITHUB_ENV
 
-      - name: Set Environment Variables
+      - name: Sign APK
+        id: sign_app
+        uses: SnapEnhance/sign-android-release@master
+        with:
+          releaseDirectory: app/build/outputs/apk/armv8/debug/
+          signingKeyBase64: ${{ secrets.JAVA_KEYSTORE_DATA }}
+          alias: ${{ secrets.KEY_ALIAS }}
+          keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+        env:
+          BUILD_TOOLS_VERSION: ${{ env.BUILD_TOOL_VERSION }}
+
+      - name: Get current build version
         id: version-env
         run: |
+          ./gradlew getVersion
           echo "version=$(cat app/build/version.txt)" >> $GITHUB_ENV
-          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
-      - name: Git branch name
-        id: git-branch-name
-        uses: EthanSK/git-branch-name-action@main
-
-      - name: Rename APK file
+      - name: Delete unsigned APK file and rename the signed one
         run: |
-          mv app/build/outputs/apk/armv8/debug/*.apk app/build/outputs/apk/armv8/debug/snapenhance-${{ env.version }}-armv8-${{ steps.version-env.outputs.sha_short }}.apk
+          find app/build/outputs/apk/armv8/debug/ -type f ! -name '*-signed*' -delete
+          mv ${{steps.sign_app.outputs.signedReleaseFile}} app/build/outputs/apk/armv8/debug/snapenhance-${{ env.version }}-armv8-${GITHUB_SHA::7}.apk
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -60,10 +70,10 @@ jobs:
         with:
           submodules: 'recursive'
 
-      - name: set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
           cache: gradle
 
@@ -73,22 +83,32 @@ jobs:
       - name: Build
         run: ./gradlew assembleArmv7Debug
 
-      - name: Build Version
-        run: ./gradlew getVersion
+      - name: Determine the latest Build Tools version installed
+        shell: bash
+        run: echo "BUILD_TOOL_VERSION=$(ls "$ANDROID_HOME/build-tools/" | tail -n 1)" >> $GITHUB_ENV
 
-      - name: Set Environment Variables
+      - name: Sign APK
+        id: sign_app
+        uses: SnapEnhance/sign-android-release@master
+        with:
+          releaseDirectory: app/build/outputs/apk/armv7/debug/
+          signingKeyBase64: ${{ secrets.JAVA_KEYSTORE_DATA }}
+          alias: ${{ secrets.KEY_ALIAS }}
+          keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+        env:
+          BUILD_TOOLS_VERSION: ${{ env.BUILD_TOOL_VERSION }}
+
+      - name: Get current build version
         id: version-env
         run: |
+          ./gradlew getVersion
           echo "version=$(cat app/build/version.txt)" >> $GITHUB_ENV
-          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
-      - name: Git branch name
-        id: git-branch-name
-        uses: EthanSK/git-branch-name-action@main
-
-      - name: Rename APK file
+      - name: Delete unsigned APK file and rename the signed one
         run: |
-          mv app/build/outputs/apk/armv7/debug/*.apk app/build/outputs/apk/armv7/debug/snapenhance-${{ env.version }}-armv7-${{ steps.version-env.outputs.sha_short }}.apk
+          find app/build/outputs/apk/armv7/debug/ -type f ! -name '*-signed*' -delete
+          mv ${{steps.sign_app.outputs.signedReleaseFile}} app/build/outputs/apk/armv7/debug/snapenhance-${{ env.version }}-armv7-${GITHUB_SHA::7}.apk
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -104,10 +124,10 @@ jobs:
         with:
           submodules: 'recursive'
 
-      - name: set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
           cache: gradle
 
@@ -117,22 +137,32 @@ jobs:
       - name: Build
         run: ./gradlew assembleAllDebug
 
-      - name: Build Version
-        run: ./gradlew getVersion
+      - name: Determine the latest Build Tools version installed
+        shell: bash
+        run: echo "BUILD_TOOL_VERSION=$(ls "$ANDROID_HOME/build-tools/" | tail -n 1)" >> $GITHUB_ENV
 
-      - name: Set Environment Variables
+      - name: Sign APK
+        id: sign_app
+        uses: SnapEnhance/sign-android-release@master
+        with:
+          releaseDirectory: app/build/outputs/apk/all/debug/
+          signingKeyBase64: ${{ secrets.JAVA_KEYSTORE_DATA }}
+          alias: ${{ secrets.KEY_ALIAS }}
+          keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+        env:
+          BUILD_TOOLS_VERSION: ${{ env.BUILD_TOOL_VERSION }}
+
+      - name: Get current build version
         id: version-env
         run: |
+          ./gradlew getVersion
           echo "version=$(cat app/build/version.txt)" >> $GITHUB_ENV
-          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
-      - name: Git branch name
-        id: git-branch-name
-        uses: EthanSK/git-branch-name-action@main
-
-      - name: Rename APK files
+      - name: Delete unsigned APK file and rename the signed one
         run: |
-          mv app/build/outputs/apk/all/debug/*.apk app/build/outputs/apk/all/debug/snapenhance-${{ env.version }}-universal-${{ steps.version-env.outputs.sha_short }}.apk
+          find app/build/outputs/apk/all/debug/ -type f ! -name '*-signed*' -delete
+          mv ${{steps.sign_app.outputs.signedReleaseFile}} app/build/outputs/apk/all/debug/snapenhance-${{ env.version }}-universal-${GITHUB_SHA::7}.apk
 
       - name: Upload universal
         uses: actions/upload-artifact@v4
@@ -148,10 +178,10 @@ jobs:
         with:
           submodules: 'recursive'
 
-      - name: set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
           cache: gradle
 
@@ -175,10 +205,10 @@ jobs:
         with:
           submodules: 'recursive'
 
-      - name: set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
           cache: gradle
 
@@ -193,4 +223,3 @@ jobs:
         with:
           name: core
           path: app/build/outputs/apk/core/debug/*.apk
-  
